Details container has been created.

--- a/src/ra-days/presentational/ra-day-simplified.component.html
+++ b/src/ra-days/presentational/ra-day-simplified.component.html
@@ -11,5 +11,5 @@
     <p>
         Temp: {{$ctrl.day.main.temp}}
     </p>
-    <a ui-sref=""></a>
+    <a ui-sref="days-details({datetime: $ctrl.day.dt_txt})">Go to details</a>
 </section>
